src/objects/ACET_ProviderDivConversionCombination__mdt.object
<CustomObject>
    <description>This meta data combination will be used to convert Member CosmosDiv values to respective Provider Div values while sending them to Provider Contract API</description>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Div__c</fullName>
        <label>Member Div</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Div__c</fullName>
        <label>Provider Div</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>ACET_Provider_Div_Conversion_Mapping</label>
    <pluralLabel>ACET_Provider_Div_Conversion_Mappings</pluralLabel>
</CustomObject>